[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-emulator"
version = "0.1.0"
description = "Frame Glasses screen emulator"
authors = [
    { name = "Urbanonymous", email = "ugutitej@gmail.com" }
]
dependencies = [
    "lupa>=2.4",
    "pydantic>=2.10.6",
    "pygame>=2.6.1",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/yourusername/frame-emulator"
"Bug Tracker" = "https://github.com/yourusername/frame-emulator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.rye]
managed = true
dev-dependencies = [
    "black",
    "isort",
    "mypy"
]
